--- a/index.html
+++ b/index.html
@@ -7483,7 +7483,8 @@ a.anchor-link {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h2 id="Picture-1">Picture 1<a class="anchor-link" href="#Picture-1">¶</a></h2><p><img alt="Figure_x" src="beach-boat.jpg"/>
-<img alt="Figure_x" src="test1.gif"/></p>
+<img alt="Figure_x" src="test1.gif"/>
+<img alt="Figure_x" src="giphy.gif"/></p>
 </div>
 </div>
 </div>
