--- a/index.html
+++ b/index.html
@@ -7482,7 +7482,30 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="Picture-1">Picture 1<a class="anchor-link" href="#Picture-1">¶</a></h2><p><img alt="Figure_x" src="giphy.gif"/></p>
+<h1 id="Variable-injection">Variable injection<a class="anchor-link" href="#Variable-injection">¶</a></h1><h3 id="(Figure-5.2-&amp;-5.3)">(Figure 5.2 &amp; 5.3)<a class="anchor-link" href="#(Figure-5.2-&amp;-5.3)">¶</a></h3><h4 id="Case-25">Case 25<a class="anchor-link" href="#Case-25">¶</a></h4><p><img alt="Figure_x" src="giphy.gif"/></p>
+<h4 id="Case-55">Case 55<a class="anchor-link" href="#Case-55">¶</a></h4><p><img alt="Figure_x" src="giphy.gif"/></p>
+<h4 id="Case-85">Case 85<a class="anchor-link" href="#Case-85">¶</a></h4><p><img alt="Figure_x" src="giphy.gif"/></p>
+<h1 id="Variable-shale">Variable shale<a class="anchor-link" href="#Variable-shale">¶</a></h1><h3 id="(Figure-5.4-&amp;-5.5)">(Figure 5.4 &amp; 5.5)<a class="anchor-link" href="#(Figure-5.4-&amp;-5.5)">¶</a></h3><h4 id="Case-108">Case 108<a class="anchor-link" href="#Case-108">¶</a></h4><p><img alt="Figure_x" src="giphy.gif"/></p>
+<h4 id="Case-116">Case 116<a class="anchor-link" href="#Case-116">¶</a></h4><p><img alt="Figure_x" src="giphy.gif"/></p>
+<h4 id="Case-120">Case 120<a class="anchor-link" href="#Case-120">¶</a></h4><p><img alt="Figure_x" src="giphy.gif"/></p>
+<h4 id="Case-124">Case 124<a class="anchor-link" href="#Case-124">¶</a></h4><p><img alt="Figure_x" src="giphy.gif"/></p>
+<h1 id="Unseen-/-Untrained-structures">Unseen / Untrained structures<a class="anchor-link" href="#Unseen-/-Untrained-structures">¶</a></h1><h3 id="(Figure-5.11-&amp;-5.12)">(Figure 5.11 &amp; 5.12)<a class="anchor-link" href="#(Figure-5.11-&amp;-5.12)">¶</a></h3><h4 id="Reservoir-A">Reservoir A<a class="anchor-link" href="#Reservoir-A">¶</a></h4><p><img alt="Figure_x" src="giphy.gif"/></p>
+<h4 id="Reservoir-B">Reservoir B<a class="anchor-link" href="#Reservoir-B">¶</a></h4><p><img alt="Figure_x" src="giphy.gif"/></p>
+<h4 id="Reservoir-C">Reservoir C<a class="anchor-link" href="#Reservoir-C">¶</a></h4><p><img alt="Figure_x" src="giphy.gif"/></p>
+</div>
+</div>
+</div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=04e002c7-da6e-4a28-a50e-862129b9f501">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In [ ]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+<div class="cm-editor cm-s-jupyter">
+<div class="highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+</div>
 </div>
 </div>
 </div>
