final final final

--- a/index.html
+++ b/index.html
@@ -7482,25 +7482,22 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>This webpage shows the results accompanying the figures in the thesis (CCS Reservoir
-Simulation usin
-Graph Neur l
-Networks, retrievable at <a href="https://repository.tudelft.n">https://repository.tudelft.n</a>. Contact: ljjveeger@gmail.coml/)</p>
+<p>This webpage shows the results accompanying the figures in the thesis (CCS Reservoir Simulation using Graph Neural Networks, retrievable at <a href="https://repository.tudelft.nl/">https://repository.tudelft.nl/</a>). Contact: ljjveeger@gmail.com</p>
 <h1 id="Variable-injection">Variable injection<a class="anchor-link" href="#Variable-injection">¶</a></h1><h3 id="(Figure-5.2-&amp;-5.3)">(Figure 5.2 &amp; 5.3)<a class="anchor-link" href="#(Figure-5.2-&amp;-5.3)">¶</a></h3><h4 id="Case-25">Case 25<a class="anchor-link" href="#Case-25">¶</a></h4><p><img alt="Figure_x" src="case25_ep99_dpi100_iterated_start0_end144.gif"/></p>
 <h4 id="Case-55">Case 55<a class="anchor-link" href="#Case-55">¶</a></h4><p><img alt="Figure_x" src="case55_ep99_dpi100_iterated_start0_end144.gif"/></p>
 <h4 id="Case-85">Case 85<a class="anchor-link" href="#Case-85">¶</a></h4><p><img alt="Figure_x" src="case85_ep99_dpi100_iterated_start0_end144.gif"/></p>
-<h1 id="Variable-shale">Variable shale<a class="anchor-link" href="#Variable-shale">¶</a></h1><p>F
-For illustrative purposes, the post-injection phase (&gt;12 years) is included in these animations. See discussion in section 4.4.3, 5.5.2 and 6.2 for more details on this part of the simulation and why it is not yet captured properlyle</p>
+<h1 id="Variable-shale">Variable shale<a class="anchor-link" href="#Variable-shale">¶</a></h1><p>For illustrative purposes, the post-injection phase (&gt;12 years) is included in these animations. See discussion in section 4.4.3, 5.5.2 and 6.2 for more details on this part of the simulation and why it is not yet captured properly.</p>
 <h3 id="(Figure-5.4-&amp;-5.5)">(Figure 5.4 &amp; 5.5)<a class="anchor-link" href="#(Figure-5.4-&amp;-5.5)">¶</a></h3><h4 id="Case-108">Case 108<a class="anchor-link" href="#Case-108">¶</a></h4><p><img alt="Figure_x" src="case108_ep135_dpi100_iterated_start0_end160.gif"/></p>
 <h4 id="Case-116">Case 116<a class="anchor-link" href="#Case-116">¶</a></h4><p><img alt="Figure_x" src="case116_ep135_dpi100_iterated_start0_end160.gif"/></p>
 <h4 id="Case-120">Case 120<a class="anchor-link" href="#Case-120">¶</a></h4><p><img alt="Figure_x" src="case120_ep135_dpi100_iterated_start0_end160.gif"/></p>
 <h4 id="Case-124">Case 124<a class="anchor-link" href="#Case-124">¶</a></h4><p><img alt="Figure_x" src="case124_ep135_dpi100_iterated_start0_end160.gif"/></p>
-<h1 id="Value-bounce">Value bounce<a class="anchor-link" href="#Value-bounce">¶</a></h1><p>In the roll-out animation the value bounc described in the thesis (section 5.5.1)ing can clearly be observed.</p>
+<h1 id="Value-bounce">Value bounce<a class="anchor-link" href="#Value-bounce">¶</a></h1><p>In the roll-out animation the value bouncing described in the thesis (section 5.5.1) can clearly be observed.</p>
 <h3 id="(Simulation-corresponding-to-data-from-Figure-5.8)">(Simulation corresponding to data from Figure 5.8)<a class="anchor-link" href="#(Simulation-corresponding-to-data-from-Figure-5.8)">¶</a></h3><p><img alt="Figure_x" src="case112_ep159_dpi100_iterated_start0_end160.gif"/></p>
 <h1 id="Unseen-/-Untrained-structures">Unseen / Untrained structures<a class="anchor-link" href="#Unseen-/-Untrained-structures">¶</a></h1><h3 id="(Figure-5.11-&amp;-5.12)">(Figure 5.11 &amp; 5.12)<a class="anchor-link" href="#(Figure-5.11-&amp;-5.12)">¶</a></h3><h4 id="Reservoir-A">Reservoir A<a class="anchor-link" href="#Reservoir-A">¶</a></h4><p><img alt="Figure_x" src="case141_ep135_dpi100_iterated_start0_end144.gif"/></p>
 <h4 id="Reservoir-B">Reservoir B<a class="anchor-link" href="#Reservoir-B">¶</a></h4><p><img alt="Figure_x" src="case142_ep135_dpi100_iterated_start0_end144.gif"/></p>
 <h4 id="Reservoir-C">Reservoir C<a class="anchor-link" href="#Reservoir-C">¶</a></h4><p><img alt="Figure_x" src="case143_ep135_dpi100_iterated_start0_end144.gif"/></p>
-<p>Contact: ljjveeger@gmail.com</p>
+<p>Contact: ljjveeger@gmail.com
+m</p>
 </div>
 </div>
 </div>
